--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -9,14 +9,14 @@
     android:layout_marginBottom="14dp"
     app:cardBackgroundColor="@color/no_color"
     app:cardElevation="0dp"
-    app:cardCornerRadius="15dp">
+    app:cardCornerRadius="35dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:padding="20dp"
-            android:background="@drawable/glass_card">
+            android:background="@drawable/glass">
 
             <ImageView
                 android:id="@+id/iv_photo"
