--- a/app/src/main/res/layout/card_item2.xml
+++ b/app/src/main/res/layout/card_item2.xml
@@ -9,14 +9,14 @@
     android:layout_marginBottom="14dp"
     app:cardBackgroundColor="@color/no_color"
     app:cardElevation="0dp"
-    app:cardCornerRadius="15dp">
+    app:cardCornerRadius="35dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:padding="20dp"
-        android:background="@drawable/glass_card">
+        android:background="@drawable/glass">
 
         <ImageView
             android:id="@+id/iv_photo2"
@@ -80,7 +80,7 @@
 
                 <Button
                     android:id="@+id/btnSatu2"
-                    android:layout_width="52dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="20.22dp"
                     android:background="@drawable/btn_theme"
                     android:fontFamily="@font/poppins_semibold"
