Memperbaiki bug frame ikut ketika keyboard muncul, memperbaiki edit text pada dashboard, menambahkan logo search di edit text dashboard

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,6 +8,7 @@
     tools:context=".DetailActivity">
 
     <Button
+        android:id="@+id/btnBack"
         android:layout_width="25.97dp"
         android:layout_height="25.97dp"
         android:layout_marginTop="30dp"
