--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,31 +64,48 @@
                 app:layout_constraintStart_toEndOf="@+id/tvHiMessage"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="Search Icon"
-                android:src="@drawable/search_icon"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.873"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.211" />
 
-            <EditText
-                android:id="@+id/searchView"
+            <FrameLayout
+                android:id="@+id/frameSearchView"
                 android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="32dp"
+
                 android:background="@drawable/glass"
-                android:paddingStart="30dp"
-                android:hint="Yuk cari kegiatan kamu di sini"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivProfile" />
+                app:layout_constraintTop_toBottomOf="@+id/ivProfile">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:layout_marginStart="20dp"
+                        android:id="@+id/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/poppins_regular"
+                        android:text="Yuk cari kegiatan yang kamu mau"
+                        android:textSize="15sp"
+                        android:background="@color/white_transparent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginEnd="15dp"
+                        android:background="@drawable/search_icon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/flWebinar"
@@ -97,7 +114,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="45dp"
                 app:layout_constraintEnd_toStartOf="@+id/frameLayout3"
-                app:layout_constraintTop_toBottomOf="@+id/searchView">
+                app:layout_constraintTop_toBottomOf="@+id/frameSearchView">
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -115,7 +132,7 @@
                 android:layout_marginTop="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchView">
+                app:layout_constraintTop_toBottomOf="@+id/frameSearchView">
 
                 <ImageView
                     android:id="@+id/iv"
@@ -133,7 +150,7 @@
                 android:layout_marginStart="45dp"
                 android:layout_marginTop="40dp"
                 app:layout_constraintStart_toEndOf="@+id/frameLayout3"
-                app:layout_constraintTop_toBottomOf="@+id/searchView">
+                app:layout_constraintTop_toBottomOf="@+id/frameSearchView">
 
                 <ImageView
                     android:id="@+id/iv2"
@@ -141,7 +158,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:src="@drawable/bootcamp_logo"
-                    app:layout_constraintTop_toBottomOf="@+id/searchView" />
+                    app:layout_constraintTop_toBottomOf="@+id/frameSearchView" />
 
             </FrameLayout>
 
